--- a/LojaVirtual/Views/Home/Index.cshtml
+++ b/LojaVirtual/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@model LojaVirtual.Models.NewsletterEmail
 @{
     ViewData["Title"] = "Index";
 }
@@ -66,15 +67,6 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-
-
-
-
-    <!-- Lista de Produtos
-            ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
-
     <div class="container" id="code_prod_complex">
         <div class="row">
             <div class="col-md-4">
@@ -94,16 +86,16 @@
                             </ul>
                             <div class="label-rating">132 reviews</div>
                             <div class="label-rating">154 orders </div>
-                        </div> <!-- rating-wrap.// -->
+                        </div>
                     </figcaption>
                     <div class="bottom-wrap">
                         <a href="" class="btn btn-sm btn-primary float-right">Order Now</a>
                         <div class="price-wrap h5">
                             <span class="price-new">$1280</span> <del class="price-old">$1980</del>
-                        </div> <!-- price-wrap.// -->
-                    </div> <!-- bottom-wrap.// -->
+                        </div>
+                    </div>
                 </figure>
-            </div> <!-- col // -->
+            </div>
             <div class="col-md-4">
                 <figure class="card card-product">
                     <div class="img-wrap"><img src="images/items/2.jpg"> </div>
@@ -121,16 +113,16 @@
                             </ul>
                             <div class="label-rating">132 reviews</div>
                             <div class="label-rating">154 orders </div>
-                        </div> <!-- rating-wrap.// -->
+                        </div>
                     </figcaption>
                     <div class="bottom-wrap">
                         <a href="" class="btn btn-sm btn-primary float-right">Order Now</a>
                         <div class="price-wrap h5">
                             <span class="price-new">$1280</span> <del class="price-old">$1980</del>
-                        </div> <!-- price-wrap.// -->
-                    </div> <!-- bottom-wrap.// -->
+                        </div>
+                    </div>
                 </figure>
-            </div> <!-- col // -->
+            </div>
             <div class="col-md-4">
                 <figure class="card card-product">
                     <div class="img-wrap"><img src="images/items/3.jpg"></div>
@@ -148,16 +140,48 @@
                             </ul>
                             <div class="label-rating">132 reviews</div>
                             <div class="label-rating">154 orders </div>
-                        </div> <!-- rating-wrap.// -->
+                        </div>
                     </figcaption>
                     <div class="bottom-wrap">
                         <a href="" class="btn btn-sm btn-primary float-right">Order Now</a>
                         <div class="price-wrap h5">
                             <span class="price-new">$1280</span> <del class="price-old">$1980</del>
-                        </div> <!-- price-wrap.// -->
-                    </div> <!-- bottom-wrap.// -->
+                        </div>
+                    </div>
                 </figure>
-            </div> <!-- col // -->
-        </div> <!-- row.// -->
+            </div>
+        </div>
     </div>
 </main>
+
+@using (Html.BeginForm(null, null, null, FormMethod.Post, false, new { @action = @Url.Action("index", "home") + "#formulario" }))
+{
+    <div class="container" id="formulario">
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2">
+                @if (TempData["MSG_S"] != null)
+                {
+                    <p class="alert alert-success">@TempData["MSG_S"]</p>
+                }
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 offset-sm-2">
+                <div class="form-group">
+                    <label for="nome">Cadastre seu e-mail para receber promoções:</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-envelope "></i></span>
+                        </div>
+                        @Html.EditorFor(m=>m.Email, new { htmlAttributes = new { @class= "form-control" } })
+                    </div>
+                    <span style="color: red;">@Html.ValidationMessageFor(m=>m.Email)</span>
+                </div>
+            </div>
+            <div class="col-sm-2">
+                <br />
+                <button class="subscribe btn btn-primary btn-block" type="submit" style="margin-top: 9px"> Cadastrar-se </button>
+            </div>
+        </div>
+    </div>
+}
