--- a/LojaVirtual/Views/Home/Login.cshtml
+++ b/LojaVirtual/Views/Home/Login.cshtml
@@ -1,11 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model LojaVirtual.Models.Cliente
+﻿@model LojaVirtual.Models.Cliente
 @{
     ViewData["Title"] = "Login";
 }
-
 <main role="main">
     <br />
     <br />
@@ -35,7 +31,7 @@
                                 <input asp-for="Senha" class="form-control" placeholder="******" type="password">
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-primary btn-block">Acessar</button>
+                                <button type="submit" class="btn btn-primary btn-block"> Acessar </button>
                             </div>
                         </form>
                     </article>
