--- a/LojaVirtual/Views/Produto/Visualizar.cshtml
+++ b/LojaVirtual/Views/Produto/Visualizar.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LojaVirtual.Models.Produto
 
-<h3>Produto -> Vizualizar</h3>
-):
+<h3>Produto -> Visualizar</h3>
+:)
 
 Razor:
 @{
-    string nome = "Alessandro Muniz";
+    string nome = "Elias Ribeiro";
 }
 <h3>@nome</h3>
 <br />
@@ -15,5 +15,6 @@ Razor:
 <b>Descrição:</b> @Model.Descricao <br />
 <b>Valor:</b> @Model.Valor.ToString("C") <br />
 
+
 <br />
-Todos os Direitos Reservados &copy; @DateTime.Now.Year
+Todos os direitos reservados &copy; @DateTime.Now.Year
