--- a/LojaVirtual/Areas/Colaborador/Views/Categoria/Index.cshtml
+++ b/LojaVirtual/Areas/Colaborador/Views/Categoria/Index.cshtml
@@ -2,9 +2,24 @@
 @{
     ViewData["Title"] = "Index";
 }
+@{
+    /*
+        @if (categoria.CategoriaPai != null)
+        {
+            <span>@categoria.CategoriaPai.Id - @categoria.CategoriaPai.Nome</span>
+        }
+        else
+        {
+            <span>--</span>
+        }
+    */
+}
+
 <h1>Categoria</h1>
 
 <a asp-action="Cadastrar" class="btn btn-primary">Cadastrar</a>
+<br />
+<br />
 
 @if (TempData["MSG_S"] != null)
 {
@@ -13,6 +28,7 @@
 
 @if (Model.Count > 0)
 {
+
     <div class="table-responsive">
         <table class="table table-bordered">
             <thead>
@@ -43,7 +59,9 @@
             </tbody>
         </table>
     </div>
+
     @Html.PagedListPager((IPagedList)Model, pagina => Url.Action("Index", new { pagina }))
+
 }
 else
 {
