--- a/LojaVirtual/Views/Home/CadastroCliente.cshtml
+++ b/LojaVirtual/Views/Home/CadastroCliente.cshtml
@@ -1,12 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model Cliente
+﻿@model Cliente
 @{
     ViewData["Title"] = "CadastroCliente";
 }
 <form asp-action="CadastroCliente" asp-controller="Home" method="post">
     <main role="main">
+
         <section class="container" style="margin-top: 50px">
             <div class="row">
                 <aside class="col-sm-6">
@@ -39,11 +37,11 @@
                                 <div class="form-group">
                                     <label class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" asp-for="Sexo" value="M">
-                                        <span class="form-check-label">Masculino</span>
+                                        <span class="form-check-label"> Masculino </span>
                                     </label>
                                     <label class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" asp-for="Sexo" value="F">
-                                        <span class="form-check-label">Feminino</span>
+                                        <span class="form-check-label"> Feminino</span>
                                     </label>
                                     <span asp-validation-for="Sexo"></span>
                                 </div>
@@ -70,10 +68,11 @@
                                     <span asp-validation-for="Senha"></span>
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+                                    <button type="submit" class="btn btn-primary btn-block"> Cadastrar </button>
                                 </div>
+
                             </article>
-                            <div class="border-top card-body text-center">Já tem um conta? <a asp-action="Login" asp-controller="Home"> Entre</a></div>
+                            <div class="border-top card-body text-center">Já tem um conta? <a asp-action="Login" asp-controller="Home">Entre</a></div>
                         </div>
                     </div>
                 </aside>
