--- a/LojaVirtual/Views/Shared/_Layout.cshtml
+++ b/LojaVirtual/Views/Shared/_Layout.cshtml
@@ -7,13 +7,14 @@
     <title>@ViewBag.Title</title>
 
     <meta name="description" content="Loja Virtual em ASP.NET">
-    <meta name="author" content="Alemcar">
+    <meta name="author" content="Elias Ribeiro">
     <link rel="stylesheet" href="/resources/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/resources/lib/caroussel/carousel.css" />
     <link rel="stylesheet" href="/resources/lib/bootstrap-ecommerce-uikit/css/ui.css" />
     <link rel="stylesheet" href="/resources/lib/bootstrap-ecommerce-uikit/css/responsive.css" rel="stylesheet" media="only screen and (max-width: 1200px)" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet"href="~/css/StyleSheet.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/StyleSheet.css" />
 </head>
 <body>
     <header>
@@ -58,11 +59,9 @@
             </div>
         </nav>
     </header>
-
     <div>
         @RenderBody()
     </div>
-
     <hr class="featurette-divider">
 
     <!-- FOOTER -->
@@ -79,5 +78,6 @@
     <script src="/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"></script>
     <script src="/resources/lib/popper1.14.6/popper.min.js"></script>
     <script src="/resources/lib/bootstrap-4.2.1-dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
