--- a/LojaVirtual/Areas/Colaborador/Views/Shared/_Layout.cshtml
+++ b/LojaVirtual/Areas/Colaborador/Views/Shared/_Layout.cshtml
@@ -9,7 +9,8 @@
     <meta name="generator" content="Jekyll v3.8.5">
     <title>@ViewBag.Title</title>
 
-    <!-- Bootstrap core CSS -->
+    <link href="~/css/StyleSheet.css" rel="stylesheet" type="text/css" />
+
     <link href="~/resources/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/resources/lib/pagedlist/PagedList.css" rel="stylesheet" type="text/css" />
 
@@ -61,12 +62,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" asp-action="Index" asp-controller="Produto">
                                 <span data-feather="shopping-cart"></span>
                                 Produtos
                             </a>
                         </li>
-                        @if (colaborador.GetColaborador().Tipo == ColaboradorTipoConstant.Gerente)
+                        @if (colaborador.GetColaborador() != null && colaborador.GetColaborador().Tipo == ColaboradorTipoConstant.Gerente)
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Colaborador" asp-action="Index">
@@ -76,7 +77,7 @@
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" asp-controller="Cliente" asp-action="Index">
                                 <span data-feather="users"></span>
                                 Cliente
                             </a>
@@ -140,10 +141,11 @@
     </div>
     <script src="~/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"></script>
     <script>window.jQuery || document.write('<script src="/resources/lib/jquery3.3.1/jquery-3.3.1.min.js"><\/script>')</script>
-    <script src="~/js/Actions.js"></script>
+    <script src="~/resources/lib/mask/jquery.mask.min.js"></script>
     <script src="~/resources/lib/bootstrap-4.2.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/resources/lib/feather/feather.js"></script>
     <script src="~/resources/lib/charts/charts.js"></script>
     <script src="~/resources/lib/dashboard/dashboard.js"></script>
+    <script src="~/js/Actions.js"></script>
 </body>
 </html>
